Bug 389224: Clipped objects are sometimes not fully redrawn after clipping. r+sr=roc, a=dbaron